--- a/quick-app/package.json
+++ b/quick-app/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "org.example.myquickapp",
+  "name": "es.espinr.comicbookroute",
   "version": "0.0.1",
   "license": "MIT",
-  "repository": "https://github.com/pbesteu/poi-quick-app",
-  "description": "Sample quick app for Cultural Heritage promotion",
+  "repository": "https://github.com/pbesteu/comic-book-route-quick-app",
+  "description": "Sample quick app for Brussels Comic Book Route",
   "scripts": {
     "fa-build": "node node_modules/webpack/bin/webpack.js --progress --config ./node_modules/fa-toolkit/webpack.config.js",
     "fa-watch": "node node_modules/webpack/bin/webpack.js --watch --progress --config ./node_modules/fa-toolkit/webpack.config.js",
