Attribution to the icon creator

--- a/quick-app/package.json
+++ b/quick-app/package.json
@@ -11,6 +11,7 @@
   },
   "devDependencies": {
     "geolib": "^3.3.3",
-    "cross-env": "^7.0.2"
+    "cross-env": "^7.0.2",
+    "fa-toolkit": "file:fa-toolkit-11.3.2-Stable.302.tgz"
   }
 }
